# Ruistper

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  entrypoint.sh
src/: app.rs  config.rs  main.rs  metrics.rs  retry.rs  shutdown.rs
src/audio/: decoder.rs  mod.rs  pipeline.rs  resampler.rs
src/messaging/: consumer.rs  mod.rs  producer.rs  rabbit.rs
src/model/: mod.rs  request.rs  result.rs
src/whisper/: engine.rs  mod.rs  model.rs
src/worker/: mod.rs  pool.rs  task.rs
